--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "fontawesome": "latest",
     "simple-line-icons": "latest",
     "chart.js": "^2.3.0",
-    "angular-chart.js": "^1.0.3"
+    "angular-chart.js": "^1.0.3",
+    "angularjs-datepicker": "^2.1.21"
   },
   "private": true
 }
